--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
   <button id="createLink">Generate Link 🔗</button>
 
- <p id="linkBox"></p>
+  <p id="linkBox"></p>
 
-<div class="share-area">
-  <button id="shareBtn" class="share-btn">Share 💌</button>
-  <button id="whatsappBtn" class="share-btn whatsapp">WhatsApp 🟢</button>
-</div>
+  <div class="share-area">
+    <button id="shareBtn" class="share-btn">Share 💌</button>
+    <button id="whatsappBtn" class="share-btn whatsapp">WhatsApp 🟢</button>
+  </div>
+</div> <!-- ✅ THIS WAS MISSING -->
 
 <!-- VALENTINE QUESTION SCREEN -->
 <div class="card hidden" id="ask">
