--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
+<canvas id="confetti"></canvas>
+
 <script src="script.js"></script>
+
 </body>
 </html>
